Alignment fix.

--- a/app/assets/stylesheets/_site.scss
+++ b/app/assets/stylesheets/_site.scss
@@ -1646,7 +1646,7 @@ Structure
 	-webkit-appearance: none;
 	background: none;
 	border: none;
-	padding: 7px 3px 5px 3px;
+	padding: 9px 3px 5px 3px;
 	margin: 0;
 	display: block;
 	&:hover {
